--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -31,10 +31,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.appengine</groupId>
-            <artifactId>appengine-api-1.0-sdk</artifactId>
-            <version>1.9.59</version>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-translate</artifactId>
+            <version>1.70.0</version>
         </dependency>
+
 
   </dependencies>
 
